src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.but {
  border:none;
  font-size: 2rem;
  align-items: center;
  box-shadow: 
    12px 12px 16px  rgba(0, 0, 0, 0.25),
    -8px -8px 12px  rgba(255, 255, 255, 0.3);
  border-radius: 15vh;
  display: flex;
  height: 30vh;
  justify-content: center;
  width: 30vh;
  font-weight: bold;
  cursor: pointer;

}

.but:focus {
  box-shadow: 
  -2px -2px 12px  rgba(0, 0, 0, 0.25),
  3px 12px 16px  rgba(255, 255, 255, 0.3);

}

.container {
  height:100vh;
  /* padding-top: 45px; */
  align-items: center;
  width:100vw;
  display:flex;
  flex-direction: column;
  justify-content:center;
}

.container-green{
  background-color: #b7d783;

}

.container-green .but{
  background-color: #afd275;
  color: #46542f;
}

.container-blue .but{
  background-color: #77cad4 ;
  color: #18282a;

}


.container-blue h1 {
  color: #305155;

}

.container-blue h3 {
  color: #47797f;

}



.container-green h1 {
  color: #343f23;

}

.container-green h3 {
  color: #697e46;

}





.container h1 {
  font-size: 3rem;
  margin-bottom: 0.1rem;
}

.container h3 {
  margin-bottom: 10vh;
  margin-top:0;
}

.container-blue {
  background-color: #85cfd8;

}

